Added root component and childs components

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-<!-- Our vue app will be mounted on this DOM element -->
-<div id="app"></div>
-<!-- Bundle will be injected below -->
+    <div id="container"></div>
 </body>
 
 </html>
